fixed button alignmnet

--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ h4 {
 }
 
 .buttons {
+  display: flex;
+  align-items: center;
   margin-top: 1em;
 }
 
@@ -62,7 +64,7 @@ h4 {
   margin-left: 1em;
   padding: 1em;
   width: 100px;
-  height: 50px;
+  height: 65px;
   font-size: 1rem;
   font-weight: bold;
   border-style: none;
